--- a/Editor/DyrdaDev.HierarchyTreeForUnity.Editor.asmdef
+++ b/Editor/DyrdaDev.HierarchyTreeForUnity.Editor.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "DyrdaDev.HierarchyTreeForUnity.Editor",
+    "rootNamespace": "",
     "references": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
